--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <div class="music-player">
-
+        <h1 class="music-name">Song one</h1>
+        <p class="artist-name">artist</p>
     </div>
     
     <script type="module" src="scripts/app.js"></script>
