--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="music-player">
         <h1 class="music-name">Song one</h1>
         <p class="artist-name">artist</p>
+
+        <div class="disk"></div>
     </div>
     
     <script type="module" src="scripts/app.js"></script>
