--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </div>
     
+    <script type="module" src="scripts/data.js"></script>
     <script type="module" src="scripts/app.js"></script>
 </body>
 </html>
